--- a/style.css
+++ b/style.css
@@ -2,7 +2,69 @@
     margin: 0%;
     padding: 0%;
 }
+h2{
+    font-size: 66px;
+    text-transform: uppercase;
+    font-family: Arial, Helvetica, sans-serif;
+}
 
 body{
+    /* background-color: slateblue; */
     background-color: slateblue;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
+    margin-top: 40vh;
+}
+
+.year {
+    font-size: 60px;
+    font-weight: 500;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: rgb(0, 0, 0);
+}
+
+.countdown {
+    display: flex;
+    padding: 15px;
+    font-size: 32px;
+    text-align: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.countdown div{
+    margin-right: 62px;
+    font-size: 2.5rem;
+    position: relative;
+    text-align: center;
+}
+
+.countdown div::before{
+    content: "";
+    position: absolute;
+    bottom: -40px;
+    left: 0;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 200;
+    font-family: fantasy;
+    text-transform: uppercase;
+    width: 100%; 
+}
+
+.countdown #day::before{
+    content: "days";
+}
+
+.countdown #hour::before{
+    content: "hours";
+}
+.countdown #minute::before{
+    content: "minutes";
+}
+.countdown #seconds::before{
+    content:"seconds";
 }
